# ActionsAndCI

./: .gitignore  .gitmodules  ActionsAndCI.sln  CMakeLists.txt  executable0.cpp  executable1.cpp  executable2.cpp  pushMe.txt
.github/workflows/: buildall.yml  validate.yml
src/: main.cpp
tests/: dummyTest.cpp  test1.cpp
